--- a/donorModule.html
+++ b/donorModule.html
@@ -53,7 +53,22 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -68,22 +83,7 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -100,7 +100,7 @@
                 <ion-col>
                     <ion-footer>
                         <ion-toolbar>
-                            <ion-icon name="log-out" slot="start"></ion-icon>
+                            <ion-icon name="log-out" size="large" slot="start"></ion-icon>
                             <ion-title class="logout-btn">Log Out</ion-title>
                         </ion-toolbar>
                     </ion-footer>
