--- a/adminUtility.html
+++ b/adminUtility.html
@@ -18,6 +18,14 @@
             <ion-row>
                 <ion-col>
                     <ion-item>
+                        <ion-icon name="body" slot="start"></ion-icon>
+                        <ion-title id="adminModule-btn">Tenant</ion-title>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
                         <ion-icon name="person-circle" slot="start"></ion-icon>
                         <ion-title id="adminDonor-btn">Donor</ion-title>
                     </ion-item>
@@ -57,16 +65,6 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                 <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
                 <br>
                 </ion-col>
             </ion-row>
@@ -94,7 +92,7 @@
                 <ion-col>
                     <ion-footer>
                         <ion-toolbar>
-                            <ion-icon name="log-out" slot="start"></ion-icon>
+                            <ion-icon name="log-out" size="large" slot="start"></ion-icon>
                             <ion-title class="logout-btn">Log Out</ion-title>
                         </ion-toolbar>
                     </ion-footer>
