--- a/tenantProf.html
+++ b/tenantProf.html
@@ -97,7 +97,7 @@
                 <ion-col>
                     <ion-footer>
                         <ion-toolbar>
-                            <ion-icon name="log-out" slot="start"></ion-icon>
+                            <ion-icon name="log-out" size="large" slot="start"></ion-icon>
                             <ion-title class="logout-btn">Log Out</ion-title>
                         </ion-toolbar>
                     </ion-footer>
