--- a/tenantFamily.html
+++ b/tenantFamily.html
@@ -165,7 +165,11 @@
                 <ion-label>Co-Tenant Details</ion-label>
             </ion-item>
             <ion-item>
+                <ion-label>Name</ion-label>
                 <ion-label>Zach Roe</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>ID</ion-label>
                 <ion-label>T123456</ion-label>
             </ion-item>
             <ion-item>
@@ -187,7 +191,11 @@
                 <ion-label>Co-Tenant Details</ion-label>
             </ion-item>
             <ion-item>
+                <ion-label>Name</ion-label>
                 <ion-label>Daniel Lo</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>ID</ion-label>
                 <ion-label>T123456</ion-label>
             </ion-item>
             <ion-item>
@@ -209,7 +217,11 @@
                 <ion-label>Co-Tenant Details</ion-label>
             </ion-item>
             <ion-item>
+                <ion-label>Name</ion-label>
                 <ion-label>Corbyn Bi</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>ID</ion-label>
                 <ion-label>T123456</ion-label>
             </ion-item>
             <ion-item>
