--- a/adminUtility.html
+++ b/adminUtility.html
@@ -65,37 +65,45 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <ion-footer>
-                        <ion-toolbar>
-                            <ion-icon name="log-out" size="large" slot="start"></ion-icon>
-                            <ion-title class="logout-btn">Log Out</ion-title>
-                        </ion-toolbar>
-                    </ion-footer>
+                    <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
+                        <ion-icon name="log-out" size="large" slot="start"></ion-icon>
+                        <ion-title class="logout-btn">Log Out</ion-title>
+                    </ion-item>
                 </ion-col>
             </ion-row>
         </ion-grid>
@@ -122,10 +130,10 @@
     <ion-content class="ion-padding">
         <table class="infoTable">
             <tr>
-                <th class="infoCell">ID</th>
-                <th class="infoCell">Co-Tenant</th>
-                <th class="infoCell">Unity ID</th>
-                <th class="infoCell">Unit No.</th>
+                <th class="infoCell">Bill ID</th>
+                <th class="infoCell">Split</th>
+                <th class="infoCell">Comments</th>
+                <th class="infoCell"></th>
             </tr>
 
             <tr>
@@ -136,50 +144,101 @@
 
             <tr>
 
-                <td class="infoCell">TT00001</td>
-                <td class="infoCell">CT10001</td>
-                <td class="infoCell">U10101</td>
-                <td class="infoCell">#02-410</td>
+                <td class="infoCell">UB0157</td>
+                <td class="infoCell">2</td>
+                <td class="infoCell">Waived</td>
+                <td class="infoButton">
+                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
             </tr>
 
             <tr>
 
-                <td class="infoCell">TT00002</td>
-                <td class="infoCell">CT10002</td>
-                <td class="infoCell">U10101</td>
-                <td class="infoCell">#05-930</td>
+                <td class="infoCell">UB0168</td>
+                <td class="infoCell">1</td>
+                <td class="infoCell"></td>
+                <td class="infoButton">
+                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
             </tr>
 
             <tr>
 
-                <td class="infoCell">TT00003</td>
-                <td class="infoCell">CT10003</td>
-                <td class="infoCell">U10101</td>
-                <td class="infoCell">#03-550</td>
+                <td class="infoCell">UB0170</td>
+                <td class="infoCell">2</td>
+                <td class="infoCell">Waived</td>
+                <td class="infoButton">
+                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
             </tr>
 
             <tr>
 
-                <td class="infoCell">TT00004</td>
-                <td class="infoCell">CT10004</td>
-                <td class="infoCell">U10101</td>
-                <td class="infoCell">#05-460</td>
+                <td class="infoCell">UB0171</td>
+                <td class="infoCell">2</td>
+                <td class="infoCell">-</td>
+                <td class="infoButton">
+                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
             </tr>
 
             <tr>
 
-                <td class="infoCell">TT00005</td>
-                <td class="infoCell">CT10005</td>
-                <td class="infoCell">U10101</td>
-                <td class="infoCell">#07-610</td>
+                <td class="infoCell">UB0173</td>
+                <td class="infoCell">2</td>
+                <td class="infoCell">-</td>
+                <td class="infoButton">
+                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
             </tr>
 
             <tr>
 
-                <td class="infoCell">TT00006</td>
-                <td class="infoCell">CT10006</td>
-                <td class="infoCell">U10101</td>
-                <td class="infoCell">#01-230</td>
+                <td class="infoCell">UB0175</td>
+                <td class="infoCell">1</td>
+                <td class="infoCell">Waived</td>
+                <td class="infoButton">
+                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">UB0176</td>
+                <td class="infoCell">1</td>
+                <td class="infoCell">Waived</td>
+                <td class="infoButton">
+                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">UB0179</td>
+                <td class="infoCell">2</td>
+                <td class="infoCell">-</td>
+                <td class="infoButton">
+                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">UB0180</td>
+                <td class="infoCell">1</td>
+                <td class="infoCell">Waived</td>
+                <td class="infoButton">
+                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
             </tr>
 
         </table>
