--- a/tenantCons.html
+++ b/tenantCons.html
@@ -65,7 +65,7 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
+                <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -95,12 +95,15 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <ion-footer>
-                        <ion-toolbar>
-                            <ion-icon name="log-out" size="large" slot="start"></ion-icon>
-                            <ion-title class="logout-btn">Log Out</ion-title>
-                        </ion-toolbar>
-                    </ion-footer>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
+                        <ion-icon name="log-out" size="large" slot="start"></ion-icon>
+                        <ion-title class="logout-btn">Log Out</ion-title>
+                    </ion-item>
                 </ion-col>
             </ion-row>
         </ion-grid>
