--- a/adminCons.html
+++ b/adminCons.html
@@ -146,7 +146,7 @@
                 <td class="infoCell">Evian</td>
                 <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consume-admin-Modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -156,7 +156,7 @@
                 <td class="infoCell">Noodles</td>
                 <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consume-admin-Modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -166,7 +166,7 @@
                 <td class="infoCell">Grapes</td>
                 <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consume-admin-Modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -176,7 +176,7 @@
                 <td class="infoCell">Fiji</td>
                 <td class="infoCell">Waiver</td>
                 <td class="infoButton">
-                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consume-admin-Modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -186,7 +186,7 @@
                 <td class="infoCell">Caramel</td>
                 <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consume-admin-Modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -196,7 +196,7 @@
                 <td class="infoCell">Milk</td>
                 <td class="infoCell">Fee Imposed</td>
                 <td class="infoButton">
-                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consume-admin-Modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -206,7 +206,7 @@
                 <td class="infoCell">Kiwi</td>
                 <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consume-admin-Modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -216,7 +216,7 @@
                 <td class="infoCell">Noodles</td>
                 <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consume-admin-Modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -226,7 +226,7 @@
                 <td class="infoCell">Noodles</td>
                 <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consume-admin-Modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
