--- a/adminInv.html
+++ b/adminInv.html
@@ -147,7 +147,7 @@
                 <td class="infoCell">Jack</td>
                 <td class="infoCell">Spoon</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -158,7 +158,7 @@
                 <td class="infoCell">Ah Beng</td>
                 <td class="infoCell">Carpet</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -169,7 +169,7 @@
                 <td class="infoCell">Ah Long</td>
                 <td class="infoCell">Curtain</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -180,7 +180,7 @@
                 <td class="infoCell">Ah Huat</td>
                 <td class="infoCell">Mattress</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -191,7 +191,7 @@
                 <td class="infoCell">Ah Wee</td>
                 <td class="infoCell">Bed</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -202,7 +202,7 @@
                 <td class="infoCell">Ah Kiat</td>
                 <td class="infoCell">Mirror</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -213,7 +213,7 @@
                 <td class="infoCell">Ah Tan</td>
                 <td class="infoCell">Table</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -224,7 +224,7 @@
                 <td class="infoCell">Ah Song</td>
                 <td class="infoCell">Deco</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -235,7 +235,7 @@
                 <td class="infoCell">Ah Liat</td>
                 <td class="infoCell">TV</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
