--- a/adminUtility.html
+++ b/adminUtility.html
@@ -148,7 +148,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">Waived</td>
                 <td class="infoButton">
-                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -159,7 +159,7 @@
                 <td class="infoCell">1</td>
                 <td class="infoCell"></td>
                 <td class="infoButton">
-                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -170,7 +170,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">Waived</td>
                 <td class="infoButton">
-                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -181,7 +181,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -192,7 +192,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -203,7 +203,7 @@
                 <td class="infoCell">1</td>
                 <td class="infoCell">Waived</td>
                 <td class="infoButton">
-                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -214,7 +214,7 @@
                 <td class="infoCell">1</td>
                 <td class="infoCell">Waived</td>
                 <td class="infoButton">
-                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -225,7 +225,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -236,7 +236,7 @@
                 <td class="infoCell">1</td>
                 <td class="infoCell">Waived</td>
                 <td class="infoButton">
-                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
