minor fixes based on 7.0
fixes
-admin tenant modal page

--- a/adminModule.html
+++ b/adminModule.html
@@ -148,7 +148,7 @@
                 <td class="infoCell">3</td>
                 <td class="infoCell">#02-410</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="admin-tenant-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -159,7 +159,7 @@
                 <td class="infoCell">4</td>
                 <td class="infoCell">#05-930</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="admin-tenant-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -170,7 +170,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">#03-550</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="admin-tenant-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -182,7 +182,7 @@
 
                 <td class="infoCell">#05-460</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="admin-tenant-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -193,7 +193,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">#07-610</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="admin-tenant-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -204,7 +204,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">#01-230</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="admin-tenant-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -215,7 +215,7 @@
                 <td class="infoCell">5</td>
                 <td class="infoCell">#06-238</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="admin-tenant-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -226,7 +226,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">#05-459</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="admin-tenant-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -237,7 +237,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">#04-284</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="admin-tenant-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -248,7 +248,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">#03-234</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="admin-tenant-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
@@ -259,7 +259,7 @@
                 <td class="infoCell">2</td>
                 <td class="infoCell">#02-592</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="admin-tenant-modal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
